[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/object_circleSpawn.gd" type="Script" id=1]
[ext_resource path="res://sprites/objects/spawn_circle.png" type="Texture" id=2]
[ext_resource path="res://sprites/avengers/avengers_head.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 14 )

[sub_resource type="Animation" id=2]
resource_name = "anim"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("heads:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("circle:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ]
}

[node name="object_circleSpawn" type="Node2D"]
z_index = 1
script = ExtResource( 1 )

[node name="circle" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="heads" type="Node2D" parent="."]
editor/display_folded = true
visible = false

[node name="h0" type="Sprite" parent="heads"]
position = Vector2( 44, 0 )
texture = ExtResource( 3 )
hframes = 6

[node name="h1" type="Sprite" parent="heads"]
position = Vector2( 0, 44 )
texture = ExtResource( 3 )
hframes = 6
frame = 1

[node name="h2" type="Sprite" parent="heads"]
position = Vector2( -44, 0 )
texture = ExtResource( 3 )
hframes = 6
frame = 2

[node name="h3" type="Sprite" parent="heads"]
position = Vector2( 0, -44 )
texture = ExtResource( 3 )
hframes = 6
frame = 3

[node name="h4" type="Sprite" parent="heads"]
position = Vector2( 36, -36 )
texture = ExtResource( 3 )
hframes = 6
frame = 4

[node name="h5" type="Sprite" parent="heads"]
position = Vector2( -36, 36 )
texture = ExtResource( 3 )
hframes = 6
frame = 5

[node name="buttons" type="Node2D" parent="."]
editor/display_folded = true

[node name="a0" type="TouchScreenButton" parent="buttons"]
position = Vector2( 44, 0 )
shape = SubResource( 1 )

[node name="a1" type="TouchScreenButton" parent="buttons"]
position = Vector2( 0, 44 )
shape = SubResource( 1 )

[node name="a2" type="TouchScreenButton" parent="buttons"]
position = Vector2( -44, 0 )
shape = SubResource( 1 )

[node name="a3" type="TouchScreenButton" parent="buttons"]
position = Vector2( 0, -44 )
shape = SubResource( 1 )

[node name="a4" type="TouchScreenButton" parent="buttons"]
position = Vector2( 36, -36 )
shape = SubResource( 1 )

[node name="a5" type="TouchScreenButton" parent="buttons"]
position = Vector2( -36, 36 )
shape = SubResource( 1 )

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "anim"
anims/anim = SubResource( 2 )

[connection signal="pressed" from="buttons/a0" to="." method="_on_a0_pressed"]
[connection signal="pressed" from="buttons/a1" to="." method="_on_a1_pressed"]
[connection signal="pressed" from="buttons/a2" to="." method="_on_a2_pressed"]
[connection signal="pressed" from="buttons/a3" to="." method="_on_a3_pressed"]
[connection signal="pressed" from="buttons/a4" to="." method="_on_a4_pressed"]
[connection signal="pressed" from="buttons/a5" to="." method="_on_a5_pressed"]
